--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <div class="none"></div>
     <div class="container1">
         <div class="box1">
-            <p>Lorem wfwefwefipsum dolor sit amet.</p>
-            <p>Lorem ipsum dewfwefolor sit amet.</p>
+            <p>Lorem ipsum dolor sit amet.</p>
+            <p>Lorem ipsum dolor sit amet.</p>
             <p>Lorem ipsum dolor sit amet.</p>
             <p>Lorem ipsum dolor sit amet.</p>
             <p>Lorem ipsum dolor sit amet.</p>
